--- a/src/components/track/track.css
+++ b/src/components/track/track.css
@@ -1,4 +1,5 @@
 .track_container {
-  padding: 0 var(--section-horizontal-padding);
-  background-color: aqua;
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
 }
