--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: start;
-  border-bottom: 1px solid var(--color-grey-divider);
+  border-bottom: 1px solid var(--color-gray-divider);
   padding: 0 var(--section-horizontal-padding);
   padding: 0 20px;
 }
