--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ code {
   --color-light: #fff;
   --color-dark: #000;
   --color-gray-divider: #ccc;
+  --color-red: #e32a40;
   --section-horizontal-padding: 20rem;
 }
 
