--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -7,7 +7,19 @@
 }
 
 .header_container p {
-  font-size: 1.5rem;
+  font-size: 24px;
   color: var(--color-dark-text);
   font-weight: 600;
+}
+
+@media (max-width: 924px) {
+  .header_container p {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 565px) {
+  .header_container p {
+    font-size: 18px;
+  }
 }
