--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -13,6 +13,31 @@
   background-color: var(--color-light);
   padding: 0 20px;
 }
+
 .navbar_container img {
   height: 40px;
+}
+
+@media (max-width: 1175px) {
+  .navbar_container img {
+    height: 30px;
+  }
+}
+
+@media (max-width: 820px) {
+  .navbar_container img {
+    height: 23px;
+  }
+  .navbar_container {
+    height: 50px;
+  }
+}
+
+@media (max-width: 565px) {
+  .navbar_container img {
+    height: 20px;
+  }
+  .navbar_container {
+    height: 43px;
+  }
 }
