--- a/src/components/fullDetailsView/fullDetailsView.css
+++ b/src/components/fullDetailsView/fullDetailsView.css
@@ -15,6 +15,7 @@
 .fullDetailsView_frame {
   min-height: 100px;
   max-height: 400px;
+  min-width: 150px;
   max-width: 700px;
   padding: 20px;
   border-radius: 20px;
