chore: clean-ups

--- a/src/components/taskContent/taskContent.css
+++ b/src/components/taskContent/taskContent.css
@@ -25,6 +25,7 @@
 .taskContent_placeholder_container p {
   margin-top: 8px;
   color: var(--color-primary);
+  text-align: center;
 }
 
 .taskContent_loader_container {
